--- a/ng-cli-base.cli/package.json
+++ b/ng-cli-base.cli/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "server": "json-server --watch db.json",
+    "fake-api": "json-server --watch db.json",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "materialize-css": "^0.99.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -32,6 +33,7 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.5",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
@@ -46,5 +48,11 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
+  },
+  "-vs-binding": {
+    "ProjectOpened": [
+      "start",
+      "fake-api"
+    ]
   }
 }
